--- a/src/styles .scss
+++ b/src/styles .scss
@@ -27,6 +27,9 @@ header {
       &:hover {
         color: $colorYellow;
       }
+      a {
+        text-decoration: none;
+      }
     }
   }
 }
