--- a/src/styles .scss
+++ b/src/styles .scss
@@ -29,6 +29,10 @@ header {
       }
       a {
         text-decoration: none;
+        color: white;
+      }
+      a:visited {
+        color: inherit;
       }
     }
   }
